litreview update II

--- a/texfiles/bib.bib
+++ b/texfiles/bib.bib
@@ -1,3 +1,17 @@
+@article{DBLP:journals/corr/BulucMSSS13,
+  author    = {Aydin Bulu\c{c} and
+               Henning Meyerhenke and
+               Ilya Safro and
+               Peter Sanders and
+               Christian Schulz},
+  title     = {Recent Advances in Graph Partitioning},
+  journal   = {CoRR},
+  volume    = {abs/1311.3144},
+  year      = {2013},
+  ee        = {http://arxiv.org/abs/1311.3144},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
 @inproceedings{Nishiura13,
 	title = {Restreaming graph partitioning: simple versatile algorithms for advanced balancing},
 	author = {J. Nishiura and Johan Ugander},
